@@ -2,7 +2,7 @@
 
 [General Info]
 Version=1
-LastClass=CCreateNetMapDlg
+LastClass=CConsolePropsGeneral
 LastTemplate=CDialog
 NewFileInclude1=#include "stdafx.h"
 NewFileInclude2=#include "nxcon.h"
@@ -17,20 +17,20 @@ Class9=CMapView
 
 ResourceCount=257
 Resource1=IDD_EDIT_TRAP (English (U.S.))
-Resource2=IDD_OBJTOOL_COLUMNS
+Resource2=IDD_IMPORT_CA_CERT
 Resource3=IDD_EDIT_RULE_SCRIPT (English (U.S.))
-Resource4=IDR_MAINFRAME
-Resource5=IDA_NETMAP
+Resource4=IDD_OBJECT_CLUSTER_GENERAL
+Resource5=IDD_USER_PROPERTIES
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDD_DCI_DATA_EXPORT
+Resource6=IDA_NETMAP
 Class11=CProgressDialog
-Resource7=IDD_OBJECT_GENERAL
+Resource7=IDD_EDIT_TRAP_ARG
 Class12=CAddrEntryDlg
-Resource8=IDA_SCRIPT_MANAGER
+Resource8=IDD_OBJECT_TRUSTED_NODES
 Class13=CObjectPropDlg
 Resource9=IDD_ACTION_PROPERTIES (English (U.S.))
 Resource10=IDA_AGENT_CFG_EDITOR (English (U.S.))
@@ -46,45 +46,45 @@ Resource17=IDD_NEW_USER (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDA_EPP (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDA_LAST_VALUES
+Resource20=IDA_PACKAGE_MGR
 Class17=CObjectPreview
 Resource21=IDA_TRAP_EDITOR (English (U.S.))
 Class18=CToolBox
 Class19=CObjectInfoBox
 Class20=CObjectSearchBox
-Resource22=IDD_SELECT_INTERNAL_ITEM
+Resource22=IDD_DISCOVERY_COMMUNITIES
 Class21=CEditBox
 Class22=COPGeneral
 Class23=CNodePropsGeneral
 Resource23=IDD_GRAPH_PROPERTIES (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDD_OBJECT_PRESENTATION
+Resource24=IDD_EDIT_EVENT
 Class26=CRequestProcessingDlg
 Resource25=IDD_CREATE_IF_DCI (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
-Resource27=IDA_OBJECT_COMMENTS
+Resource27=IDA_MDI_DEFAULT
 Resource28=IDD_THRESHOLD (English (U.S.))
 Class27=CObjectPropsGeneral
 Resource29=IDD_OBJTOOL_OPTIONS (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_OBJECT_NETSRV_GENERAL (English (U.S.))
-Resource31=IDA_DATA_VIEW
-Resource32=IDD_NEW_ACTION
+Resource31=IDA_SCRIPT_MANAGER
+Resource32=IDD_OBJECT_GENERAL
 Class29=CUserSelectDlg
-Resource33=IDA_CERT_MANAGER
+Resource33=IDA_OBJECT_BROWSER
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDD_MIB_BROWSER
-Resource36=IDD_INPUT_BOX
+Resource35=IDA_NODE_POLLER
+Resource36=IDD_SELECT_EVENT
 Class32=CUserPropDlg
 Resource37=IDD_SELECT_USER (English (U.S.))
-Resource38=IDD_OBJTOOL_OPTIONS
+Resource38=IDD_CREATE_NETSRV
 Class33=CGroupPropDlg
-Resource39=IDD_DESKTOP_SAVE_AS
-Resource40=IDA_MDI_DEFAULT
-Resource41=IDD_CREATE_CLUSTER
+Resource39=IDD_NEW_ACTION
+Resource40=IDD_SELECT_INTERNAL_ITEM
+Resource41=IDD_SUBMAP_BKGND
 Resource42=IDD_MIB_BROWSER (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -99,56 +99,56 @@ Class40=CGraph
 Class41=CGraphFrame
 Class42=CDCIThresholdsPage
 Resource46=IDD_DISCOVERY_RANGES (English (U.S.))
-Resource47=IDD_OBJECT_VPNC_GENERAL
-Resource48=IDD_OBJECT_RELATIONS
+Resource47=IDD_CREATE_TEMPLATE
+Resource48=IDD_CP_GENERAL
 Class43=CThresholdDlg
 Resource49=IDD_EDIT_EVENT (English (U.S.))
-Resource50=IDD_SELECT_OBJECT
+Resource50=IDD_ADDR_ENTRY
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDD_OBJECT_IF_GENERAL (English (U.S.))
-Resource52=IDD_OBJECT_TRUSTED_NODES
+Resource52=IDD_UPGRADE
 Class48=CObjectSelDlg
-Resource53=IDD_CLUSTER_RESOURCE
-Resource54=IDD_MANAGE_GRAPHS
+Resource53=IDD_OBJECT_COND_GENERAL
+Resource54=IDD_ADD_DCI
 Class49=CRuleCommentDlg
-Resource55=IDD_DCI_THRESHOLDS
+Resource55=IDA_OBJECT_COMMENTS
 Class50=CEventSelDlg
-Resource56=IDD_REQUEST_PROCESSING
+Resource56=IDD_CHANGE_PASSWORD
 Resource57=IDD_COND_DCI_PROP (English (U.S.))
-Resource58=IDD_REMOVE_TEMPLATE
+Resource58=IDA_DATA_VIEW
 Resource59=IDD_GROUP_PROPERTIES (English (U.S.))
 Resource60=IDD_DISCOVERY_GENERAL (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_SET_PASSWORD (English (U.S.))
-Resource62=IDD_THRESHOLD
+Resource62=IDA_CERT_MANAGER
 Class52=CRuleSeverityDlg
-Resource63=IDD_CREATE_NODE
+Resource63=IDD_MANAGE_GRAPHS
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDD_CHANGE_IP (English (U.S.))
-Resource65=IDD_USER_PROPERTIES
+Resource65=IDD_REQUEST_PROCESSING
 Resource66=IDD_DCI_THRESHOLDS (English (U.S.))
 Resource67=IDD_GRAPH_PROP_SETTINGS (English (U.S.))
 Resource68=IDD_CREATE_VPNC (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDA_PACKAGE_MGR
-Resource70=IDD_CHANGE_PASSWORD
+Resource69=IDD_MAP_LINK
+Resource70=IDD_GRAPH_PROP_DATA
 Class57=CNewActionDlg
-Resource71=IDD_EDIT_TRAP_ARG
+Resource71=IDD_OBJECT_IF_GENERAL
 Class58=CEditActionDlg
-Resource72=IDD_SELECT_USER
+Resource72=IDD_OBJECT_COND_SCRIPT
 Class59=CActionSelDlg
-Resource73=IDD_MAP_LINK
+Resource73=IDD_DISCOVERY_TARGETS
 Resource74=IDD_OBJECT_COND_SCRIPT (English (U.S.))
 Resource75=IDD_EDIT_TRAP_ARG (English (U.S.))
-Resource76=IDA_SITUATION_MANAGER
+Resource76=IDD_OBJTOOL_OPTIONS
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDD_SELECT_AGENT_PARAM
+Resource77=IDD_EDIT_RULE_COMMENT
 Class62=CCreateNodeDlg
 Resource78=IDA_CERT_MANAGER (English (U.S.))
 Resource79=IDT_MAP (English (U.S.))
@@ -158,31 +158,31 @@ Resource81=IDD_CREATE_CLUSTER (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_SET_CHILD_MGMT_STATUS
-Resource84=IDD_EDIT_RULE_ALARM
+Resource83=IDD_EDIT_RULE_SCRIPT
+Resource84=IDD_EDIT_IP_SUBNET
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDD_OBJECT_IF_GENERAL
-Resource86=IDD_EDIT_RULE_SITUATION
+Resource85=IDD_DISCOVERY_RANGES
+Resource86=IDD_SELECT_TRAP
 Class68=CTrapEditor
-Resource87=IDD_DEFINE_GRAPH
-Resource88=IDD_OBJECT_SECURITY
-Resource89=IDA_ALARM_BROWSER
+Resource87=IDD_OBJECT_COND_DATA
+Resource88=IDA_SERVER_CFG_EDITOR
+Resource89=IDD_DEFINE_GRAPH
 Class69=CDataQueryDlg
-Resource90=IDD_DISCOVERY_GENERAL
+Resource90=IDD_OBJECT_STATUS
 Class70=CTrapEditDlg
 Resource91=IDD_SET_CHILD_MGMT_STATUS (English (U.S.))
 Class71=CTrapParamDlg
-Resource92=IDD_CREATE_CONTAINER
-Resource93=IDD_CREATE_CONDITION
+Resource92=IDD_NEW_USER
+Resource93=IDD_LASTVAL_PROP
 Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
-Resource94=IDA_AGENT_CFG_EDITOR
+Resource94=IDD_EDIT_VARIABLE
 Resource95=IDD_IMPORT_CA_CERT (English (U.S.))
 Resource96=IDD_SUBMAP_BKGND (English (U.S.))
 Resource97=IDD_DISCOVERY_TARGETS (English (U.S.))
-Resource98=IDD_GRAPH_PROP_DATA
+Resource98=IDD_SELECT_ACTION
 Resource99=IDA_NODE_POLLER (English (U.S.))
 Resource100=IDD_CREATE_MP (English (U.S.))
 Resource101=IDM_VIEW_SPECIFIC (English (U.S.))
@@ -244,7 +244,7 @@ Class102=CWaitView
 Class103=CWebBrowser
 Class104=CSyslogBrowser
 Class105=CLPPList
-Resource129=IDD_SELECT_EVENT
+Resource129=IDD_ABOUTBOX
 Class106=CDCISchedulePage
 Resource130=IDD_FATAL_ERROR (English (U.S.))
 Class107=CObjectPropsStatus
@@ -270,113 +270,113 @@ Class119=CMapControlBox
 Resource138=IDD_MANAGE_GRAPHS (English (U.S.))
 Class120=CSubmapBkgndDlg
 Resource139=IDD_USER_PROPERTIES (English (U.S.))
-Resource140=IDA_ACTION_EDITOR
-Resource141=IDD_COND_DCI_PROP
-Resource142=IDD_CREATE_TG
-Resource143=IDD_ABOUTBOX
-Resource144=IDD_EDIT_RULE_SCRIPT
-Resource145=IDD_EDIT_RULE_COMMENT
-Resource146=IDD_CHANGE_IP
-Resource147=IDD_CREATE_NETSRV
-Resource148=IDD_SELECT_SITUATION
-Resource149=IDD_DCI_TRANSFORM
-Resource150=IDA_EVENT_EDITOR
-Resource151=IDD_EDIT_RULE_OPTIONS
-Resource152=IDD_EDIT_EVENT
-Resource153=IDD_SET_PASSWORD
-Resource154=IDD_SELECT_ACTION
-Resource155=IDA_EPP
-Resource156=IDD_DATA_QUERY
-Resource157=IDA_TRAP_EDITOR
-Resource158=IDD_GRAPH_PROP_SETTINGS
-Resource159=IDD_ADDR_ENTRY
-Resource160=IDD_CREATE_MP
-Resource161=IDD_OBJECT_NODE_POLL
-Resource162=IDD_OBJECT_CLUSTER_GENERAL
-Resource163=IDM_VIEW_SPECIFIC
-Resource164=IDD_ACTION_PROPERTIES
-Resource165=IDD_IMPORT_CA_CERT
-Resource166=IDD_ADD_DCI
-Resource167=IDD_CREATE_VPNC
-Resource168=IDA_OBJECT_TOOLS_EDITOR
-Resource169=IDD_OBJECT_CAPS
-Resource170=IDA_DC_EDITOR
-Resource171=IDD_SUBMAP_BKGND
+Resource140=IDD_OBJECT_RELATIONS
+Resource141=IDD_OBJECT_CAPS
+Resource142=IDD_SET_PASSWORD
+Resource143=IDA_EVENT_EDITOR
+Resource144=IDD_DCI_SCHEDULE
+Resource145=IDD_DCI_DATA_EXPORT
+Resource146=IDD_OBJECT_NETSRV_GENERAL
+Resource147=IDD_OBJECT_PRESENTATION
+Resource148=IDD_SELECT_MP
+Resource149=IDD_GRAPH_PROP_STYLES
+Resource150=IDD_GROUP_PROPERTIES
+Resource151=IDD_CREATE_MP
+Resource152=IDA_ACTION_EDITOR
+Resource153=IDD_OBJECT_NODE_POLL
+Resource154=IDD_SELECT_USER
+Resource155=IDD_FATAL_ERROR
+Resource156=IDD_CREATE_IF_DCI
+Resource157=IDD_OBJTOOL_COLUMNS
+Resource158=IDD_DISCOVERY_GENERAL
+Resource159=IDA_ALARM_BROWSER
+Resource160=IDD_CHANGE_IP
+Resource161=IDD_SELECT_MAP
+Resource162=IDD_MIB_BROWSER
+Resource163=IDM_CONTEXT
+Resource164=IDD_CLUSTER_RESOURCE
+Resource165=IDD_AGENT_CONFIG
+Resource166=IDD_OBJECT_NODE_GENERAL
+Resource167=IDD_CREATE_TG
+Resource168=IDD_EDIT_RULE_SITUATION
+Resource169=IDA_GRAPH
+Resource170=IDA_AGENT_CFG_EDITOR
+Resource171=IDD_GRAPH_PROP_SETTINGS
 Class121=CModuleManager
 Class122=CDesktopManager
-Resource172=IDD_SNMP_WALK
-Resource173=IDA_NODE_POLLER
+Resource172=IDD_DESKTOP_SAVE_AS
+Resource173=IDA_EPP
 Class123=CCreateCondDlg
 Class124=CCondPropsGeneral
 Class125=CCondPropsScript
 Class126=CCondPropsData
-Resource174=IDD_SELECT_MAP
+Resource174=IDD_CREATE_CLUSTER
 Class127=CAddDCIDlg
-Resource175=IDD_OBJECT_COND_DATA
+Resource175=IDD_CREATE_VPNC
 Class128=CCondDCIPropDlg
-Resource176=IDD_CREATE_IF_DCI
+Resource176=IDD_ACTION_PROPERTIES
 Class129=CAgentConfigMgr
-Resource177=IDD_GROUP_PROPERTIES
-Resource178=IDD_OBJECT_CLUSTER_RESOURCES
+Resource177=IDD_COND_DCI_PROP
+Resource178=IDD_CREATE_CONDITION
 Class130=CAgentCfgDlg
 Class131=CObjectCommentsEditor
-Resource179=IDD_EDIT_RULE_SEVERITY
+Resource179=IDD_OBJECT_VPNC_GENERAL
 Class132=CRuleScriptDlg
 Class133=CDetailsView
-Resource180=IDD_CP_GENERAL
+Resource180=IDA_OBJECT_TOOLS_EDITOR
 Class134=CDiscoveryPropGeneral
-Resource181=IDD_GRAPH_PROP_STYLES
+Resource181=IDD_EDIT_RULE_ALARM
 Class135=CDiscoveryPropTargets
-Resource182=IDD_OBJECT_COND_GENERAL
+Resource182=IDA_MAP_MANAGER
 Class136=CDiscoveryPropAddrList
-Resource183=IDD_LASTVAL_PROP
+Resource183=IDD_CREATE_CONTAINER
 Class138=CObjectView
 Class139=CObjectOverview
 Class140=CAlarmView
 Class141=CObjectDepView
-Resource184=IDD_OBJECT_NODE_GENERAL
+Resource184=IDA_TRAP_EDITOR
 Class137=CObjectBrowser
 Class142=CCreateMPDlg
-Resource185=IDD_EDIT_VARIABLE
+Resource185=IDD_DCI_TRANSFORM
 Class143=CSelectMPDlg
-Resource186=IDA_GRAPH
+Resource186=IDD_DCI_THRESHOLDS
 Class144=CTrapSelDlg
-Resource187=IDD_CREATE_TEMPLATE
+Resource187=IDD_SET_CHILD_MGMT_STATUS
 Class145=CConsoleUpgradeDlg
-Resource188=IDD_OBJECT_NETSRV_GENERAL
+Resource188=IDD_EDIT_RULE_SEVERITY
 Class146=CCreateClusterDlg
-Resource189=IDD_DISCOVERY_RANGES
+Resource189=IDD_NEW_OBJECT_TOOL
 Class147=CClusterPropsGeneral
-Resource190=IDD_SELECT_MP
+Resource190=IDD_REMOVE_TEMPLATE
 Class148=CClusterPropsResources
-Resource191=IDD_AGENT_CONFIG
+Resource191=IDD_SAVE_AGENT_CFG
 Class149=CClusterResDlg
-Resource192=IDD_DCI_COLLECTION
+Resource192=IDA_AGENT_CONFIG_MANAGER
 Class150=CClusterView
 Class151=CExtEditCtrl
-Resource193=IDD_EDIT_TRAP
+Resource193=IDD_THRESHOLD
 Class152=CFatalErrorDlg
-Resource194=IDM_CONTEXT
+Resource194=IDM_VIEW_SPECIFIC
 Class153=CDefineGraphDlg
-Resource195=IDA_SERVER_CFG_EDITOR
+Resource195=IDD_SELECT_OBJECT
 Class154=CGraphManagerDlg
-Resource196=IDD_NEW_USER
+Resource196=IDA_DC_EDITOR
 Class155=CGraphStylePage
 Class156=CNodePerfView
 Class157=CCertManager
-Resource197=IDD_DISCOVERY_COMMUNITIES
+Resource197=IDA_SITUATION_MANAGER
 Class158=CImportCertDlg
-Resource198=IDA_MAP_MANAGER
+Resource198=IDD_CREATE_NODE
 Class159=CNodeTopologyView
 Class160=CObjectStatusBar
 Class161=CObjectTree
-Resource199=IDD_OBJECT_COND_SCRIPT
+Resource199=IDD_EDIT_RULE_OPTIONS
 Class162=CChildMgmtStatusDlg
-Resource200=IDA_AGENT_CONFIG_MANAGER
+Resource200=IDR_MAINFRAME
 Class163=CCreateIfDCIDlg
 Class164=CNodeLastValuesView
 Class165=CObjectSubordinateView
-Resource201=IDD_FATAL_ERROR
+Resource201=IDD_SELECT_SITUATION
 Class166=CMapLinkPropDlg
 Resource202=IDD_INPUT_BOX (English (U.S.))
 Resource203=IDD_EDIT_RULE_SEVERITY (English (U.S.))
@@ -430,18 +430,18 @@ Class172=CRuleSituationDlg
 Resource245=IDD_UPGRADE (English (U.S.))
 Class173=CObjectPropsTrustedNodes
 Resource246=IDD_OBJECT_TRUSTED_NODES (English (U.S.))
-Resource247=IDD_NEW_OBJECT_TOOL
-Resource248=IDD_SELECT_TRAP
-Resource249=IDD_UPGRADE
-Resource250=IDD_EDIT_IP_SUBNET
-Resource251=IDD_SAVE_AGENT_CFG
-Resource252=IDD_DCI_SCHEDULE
-Resource253=IDD_OBJECT_STATUS
-Resource254=IDD_OBJTOOL_GENERAL
+Resource247=IDD_INPUT_BOX
+Resource248=IDD_DCI_COLLECTION
+Resource249=IDD_SNMP_WALK
+Resource250=IDD_DATA_QUERY
+Resource251=IDD_EDIT_TRAP
+Resource252=IDA_LAST_VALUES
+Resource253=IDD_OBJECT_CLUSTER_RESOURCES
+Resource254=IDD_SELECT_AGENT_PARAM
 Class174=CMapSelDlg
 Class175=CMapManager
-Resource255=IDD_DISCOVERY_TARGETS
-Resource256=IDA_OBJECT_BROWSER
+Resource255=IDD_OBJTOOL_GENERAL
+Resource256=IDD_OBJECT_SECURITY
 Class176=CCreateNetMapDlg
 Resource257=IDD_CREATE_NETMAP
 
@@ -2912,11 +2912,17 @@ VirtualFilter=mfWC
 [DLG:IDD_CP_GENERAL]
 Type=1
 Class=CConsolePropsGeneral
-ControlCount=4
-Control1=IDC_STATIC,button,1342177287
-Control2=IDC_CHECK_EXPAND,button,1342242819
-Control3=IDC_CHECK_GRID,button,1342242819
-Control4=IDC_CHECK_SAVE,button,1342242819
+ControlCount=10
+Control1=IDC_CHECK_EXPAND,button,1342242819
+Control2=IDC_CHECK_GRID,button,1342242819
+Control3=IDC_CHECK_SAVE,button,1342242819
+Control4=IDC_RADIO_TZLOCAL,button,1342373897
+Control5=IDC_RADIO_TZSERVER,button,1342177289
+Control6=IDC_RADIO_TZCUSTOM,button,1342177289
+Control7=IDC_EDIT_TIMEZONE,edit,1350631552
+Control8=IDC_STATIC,button,1342177287
+Control9=IDC_STATIC,button,1342177287
+Control10=IDC_STATIC,static,1342308352
 
 [DLG:IDD_NEW_ACTION]
 Type=1
