@@ -1,4 +1,4 @@
-/* $Id: session.cpp,v 1.304 2008-04-28 16:59:19 victor Exp $ */
+/* $Id: session.cpp,v 1.305 2008-05-01 09:41:27 victor Exp $ */
 /* 
 ** NetXMS - Network Management System
 ** Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008 Victor Kirhenshtein
@@ -1273,6 +1273,10 @@ void ClientSession::SendServerInfo(DWORD dwRqId)
    msg.SetVariable(VID_SUPPORTED_ENCRYPTION, (DWORD)0);
    msg.SetVariable(VID_PROTOCOL_VERSION, (DWORD)CLIENT_PROTOCOL_VERSION);
 	msg.SetVariable(VID_CHALLENGE, m_challenge, CLIENT_CHALLENGE_SIZE);
+
+	sprintf(szBuffer, "%s%c%02d%s", tzname[0], (timezone >= 0) ? '+' : '-',
+	        abs(timezone) / 3600, (tzname[1] != NULL) ? tzname[1] : "");
+	msg.SetVariable(VID_TIMEZONE, szBuffer);
 
 	ConfigReadStr(_T("WindowsConsoleUpgradeURL"), szBuffer, 1024,
 	              _T("http://www.netxms.org/download/netxms-%version%.exe"));
