@@ -2,7 +2,8 @@
 * 0.2.21
 *
 
-- Multiple network maps
+- Multiple network maps implemented
+- Added possibility to use non-local timezone in Windows console
 - Added parameter ListenAddress to all services (server, web server, agent)
 - New possible value for UseInterfaceAliases - concatenate name with alias
 - Added possibility to create custom message in event matching script and
